# mentopred

./: .gitignore  README.md  README_src.md  Readme.md  STREAMLIT_DEPLOYMENT.md  app.py  pyproject.toml  requirements.txt
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: actions_CI_CD.yaml  actions_CI_CD.yml
.streamlit/: config.toml  secrets.toml.example  setup.py
Notebooks/: data_preparation.ipynb  exploratory_data_analysis.ipynb  modeling.ipynb
Notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Notebooks/catboost_info/learn/: events.out.tfevents
Notebooks/catboost_info/test/: events.out.tfevents
configs/: Catboost_final_param.yml  baseline.yml
data/processed/: mental_health_cleaned.csv  mental_health_encoded.csv  mental_health_engineered.csv  unique_values.csv
models/: encoder_final.pkl.dvc  final_model.pkl.dvc
src/: app.py
src/data/: preprocess.py
src/models/: predict.py  train.py
src/utils/: helpers.py
